@@ -8,6 +8,7 @@ package org.jetbrains.kotlin.cli.common.arguments
 import org.jetbrains.kotlin.cli.common.messages.CompilerMessageSeverity
 import org.jetbrains.kotlin.cli.common.messages.MessageCollector
 import org.jetbrains.kotlin.config.*
+import kotlin.reflect.KVisibility
 
 class K2JVMCompilerArguments : CommonCompilerArguments() {
     companion object {
@@ -22,13 +23,18 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
         value = "-classpath",
         shortName = "-cp",
         valueDescription = "<path>",
-        description = "List of directories and JAR/ZIP archives to search for user class files")
+        description = "List of directories and JAR/ZIP archives to search for user class files"
+    )
     var classpath: String? by NullableStringFreezableVar(null)
 
-    @GradleOption(DefaultValues.BooleanFalseDefault::class)
     @Argument(value = "-include-runtime", description = "Include Kotlin runtime into the resulting JAR")
     var includeRuntime: Boolean by FreezableVar(false)
 
+    @GradleDeprecatedOption(
+        message = "This option is not working well with Gradle caching and will be removed in the future.",
+        removeAfter = "1.7",
+        level = DeprecationLevel.WARNING
+    )
     @GradleOption(DefaultValues.StringNullDefault::class)
     @Argument(
         value = "-jdk-home",
@@ -41,11 +47,12 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     @Argument(value = "-no-jdk", description = "Don't automatically include the Java runtime into the classpath")
     var noJdk: Boolean by FreezableVar(false)
 
-    @GradleOption(DefaultValues.BooleanTrueDefault::class)
-    @Argument(value = "-no-stdlib", description = "Don't automatically include the Kotlin/JVM stdlib and Kotlin reflection into the classpath")
+    @Argument(
+        value = "-no-stdlib",
+        description = "Don't automatically include the Kotlin/JVM stdlib and Kotlin reflection into the classpath"
+    )
     var noStdlib: Boolean by FreezableVar(false)
 
-    @GradleOption(DefaultValues.BooleanTrueDefault::class)
     @Argument(value = "-no-reflect", description = "Don't automatically include Kotlin reflection into the classpath")
     var noReflect: Boolean by FreezableVar(false)
 
@@ -67,13 +74,16 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     @Argument(value = "-module-name", valueDescription = "<name>", description = "Name of the generated .kotlin_module file")
     var moduleName: String? by NullableStringFreezableVar(null)
 
-    @GradleOption(DefaultValues.JvmTargetVersions::class)
+    @GradleOption(
+        value = DefaultValues.JvmTargetVersions::class,
+        backingFieldVisibility = KVisibility.INTERNAL
+    )
     @Argument(
         value = "-jvm-target",
         valueDescription = "<version>",
-        description = "Target version of the generated JVM bytecode (1.6, 1.8, 9, 10, 11, 12, 13, 14 or 15), default is 1.6"
+        description = "Target version of the generated JVM bytecode (1.6 (DEPRECATED), 1.8, 9, 10, 11, 12, 13, 14, 15, 16 or 17), default is 1.8"
     )
-    var jvmTarget: String? by NullableStringFreezableVar(JvmTarget.DEFAULT.description)
+    var jvmTarget: String? by NullableStringFreezableVar(null)
 
     @GradleOption(DefaultValues.BooleanFalseDefault::class)
     @Argument(value = "-java-parameters", description = "Generate metadata for Java 1.8 reflection on method parameters")
@@ -81,38 +91,46 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
 
     // Advanced options
 
-    @GradleOption(DefaultValues.BooleanFalseDefault::class)
-    @Argument(value = "-Xuse-ir", description = "Use the IR backend")
+    @Argument(
+        value = "-Xuse-ir",
+        description = "Use the IR backend. This option has no effect unless the language version less than 1.5 is used"
+    )
     var useIR: Boolean by FreezableVar(false)
 
-    @Argument(value = "-Xno-use-ir", description = "Do not use the IR backend. Useful for a custom-built compiler where IR backend is enabled by default")
-    var noUseIR: Boolean by FreezableVar(false)
+    @GradleOption(DefaultValues.BooleanFalseDefault::class)
+    @Argument(value = "-Xuse-old-backend", description = "Use the old JVM backend")
+    var useOldBackend: Boolean by FreezableVar(false)
 
     @Argument(
-        value = "-Xir-check-local-names",
-        description = "Check that names of local classes and anonymous objects are the same in the IR backend as in the old backend"
+        value = "-Xallow-unstable-dependencies",
+        description = "Do not report errors on classes in dependencies, which were compiled by an unstable version of the Kotlin compiler"
     )
-    var irCheckLocalNames: Boolean by FreezableVar(false)
+    var allowUnstableDependencies: Boolean by FreezableVar(false)
 
     @Argument(
-        value = "-Xallow-jvm-ir-dependencies",
-        description = "When not using the IR backend, do not report errors on those classes in dependencies, " +
-                "which were compiled by the IR backend"
+        value = "-Xabi-stability",
+        valueDescription = "{stable|unstable}",
+        description = "When using unstable compiler features such as FIR, use 'stable' to mark generated class files as stable\n" +
+                "to prevent diagnostics from stable compilers at the call site.\n" +
+                "When using the JVM IR backend, conversely, use 'unstable' to mark generated class files as unstable\n" +
+                "to force diagnostics to be reported."
     )
-    var allowJvmIrDependencies: Boolean by FreezableVar(false)
-
-    @Argument(
-        value = "-Xir-binary-with-stable-abi",
-        description = "When using the IR backend, produce binaries which can be read by non-IR backend.\n" +
-                "The author is responsible for verifying that the resulting binaries do indeed have the correct ABI"
-    )
-    var isIrWithStableAbi: Boolean by FreezableVar(false)
+    var abiStability: String? by FreezableVar(null)
 
     @Argument(
         value = "-Xir-do-not-clear-binding-context",
         description = "When using the IR backend, do not clear BindingContext between psi2ir and lowerings"
     )
     var doNotClearBindingContext: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xbackend-threads",
+        valueDescription = "<N>",
+        description = "When using the IR backend, run lowerings by file in N parallel threads.\n" +
+                "0 means use a thread per processor core.\n" +
+                "Default value is 1"
+    )
+    var parallelBackendThreads: String by FreezableVar("1")
 
     @Argument(value = "-Xmodule-path", valueDescription = "<path>", description = "Paths where to find Java 9+ modules")
     var javaModulePath: String? by NullableStringFreezableVar(null)
@@ -140,20 +158,8 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     )
     var noParamAssertions: Boolean by FreezableVar(false)
 
-    @Argument(value = "-Xstrict-java-nullability-assertions", description = "Generate nullability assertions for non-null Java expressions")
-    var strictJavaNullabilityAssertions: Boolean by FreezableVar(false)
-
     @Argument(value = "-Xno-optimize", description = "Disable optimizations")
     var noOptimize: Boolean by FreezableVar(false)
-
-    @Argument(
-        value = "-Xnormalize-constructor-calls",
-        valueDescription = "{disable|enable}",
-        description = "Normalize constructor calls (disable: don't normalize; enable: normalize),\n" +
-                "default is 'disable' in language version 1.2 and below,\n" +
-                "'enable' since language version 1.3"
-    )
-    var constructorCallNormalizationMode: String? by NullableStringFreezableVar(null)
 
     @Argument(
         value = "-Xassertions", valueDescription = "{always-enable|always-disable|jvm|legacy}",
@@ -181,17 +187,17 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     var useTypeTable: Boolean by FreezableVar(false)
 
     @Argument(
-        value = "-Xskip-runtime-version-check",
-        description = "Allow Kotlin runtime libraries of incompatible versions in the classpath"
-    )
-    var skipRuntimeVersionCheck: Boolean by FreezableVar(false)
-
-    @Argument(
         value = "-Xuse-old-class-files-reading",
         description = "Use old class files reading implementation. This may slow down the build and cause problems with Groovy interop.\n" +
                 "Should be used in case of problems with the new implementation"
     )
     var useOldClassFilesReading: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xuse-fast-jar-file-system",
+        description = "Use fast implementation on Jar FS. This may speed up compilation time, but currently it's an experimental mode"
+    )
+    var useFastJarFileSystem: Boolean by FreezableVar(false)
 
     @Argument(
         value = "-Xdump-declarations-to",
@@ -262,6 +268,17 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     var jsr305: Array<String>? by FreezableVar(null)
 
     @Argument(
+        value = "-Xnullability-annotations",
+        valueDescription = "@<fq.name>:{ignore/strict/warn}",
+        description = "Specify behavior for specific Java nullability annotations (provided with fully qualified package name)\n" +
+                "Modes:\n" +
+                "  * ignore\n" +
+                "  * strict\n" +
+                "  * warn (report a warning)"
+    )
+    var nullabilityAnnotations: Array<String>? by FreezableVar(null)
+
+    @Argument(
         value = "-Xsupport-compatqual-checker-framework-annotations",
         valueDescription = "enable|disable",
         description = "Specify behavior for Checker Framework compatqual annotations (NullableDecl/NonNullDecl).\n" +
@@ -278,39 +295,42 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     var jspecifyAnnotations: String? by FreezableVar(null)
 
     @Argument(
-        value = "-Xno-exception-on-explicit-equals-for-boxed-null",
-        description = "Do not throw NPE on explicit 'equals' call for null receiver of platform boxed primitive type"
-    )
-    var noExceptionOnExplicitEqualsForBoxedNull by FreezableVar(false)
-
-    @Argument(
         value = "-Xjvm-default",
         valueDescription = "{all|all-compatibility|disable|enable|compatibility}",
-        description = """Emit JVM default methods for interface declarations with bodies.
--Xjvm-default=all-compatibility  Generate both a default method in the interface, and a compatibility accessor
-                                 in the DefaultImpls class.
-                                 In case of inheritance from a Kotlin interface compiled in the old scheme
-                                 (DefaultImpls, no default methods), the compatibility accessor in DefaultImpls
-                                 will delegate to the DefaultImpls method of the superinterface. Otherwise the
-                                 compatibility accessor will invoke the default method on the interface, with
-                                 standard JVM runtime resolution semantics.
+        description = """Emit JVM default methods for interface declarations with bodies. Default is 'disable'.
+-Xjvm-default=all                Generate JVM default methods for all interface declarations with bodies in the module.
+                                 Do not generate DefaultImpls stubs for interface declarations with bodies, which are generated by default
+                                 in the 'disable' mode. If interface inherits a method with body from an interface compiled in the 'disable'
+                                 mode and doesn't override it, then a DefaultImpls stub will be generated for it.
+                                 BREAKS BINARY COMPATIBILITY if some client code relies on the presence of DefaultImpls classes.
                                  Note that if interface delegation is used, all interface methods are delegated.
                                  The only exception are methods annotated with the deprecated @JvmDefault annotation.
--Xjvm-default=all                Generate default methods for all interface declarations with bodies.
-                                 Do not generate DefaultImpls classes at all.
-                                 BREAKS BINARY COMPATIBILITY if some client code relies on the presence of
-                                 DefaultImpls classes. Also prohibits the produced binaries to be read by Kotlin
-                                 compilers earlier than 1.4.
-                                 Note that if interface delegation is used, all interface methods are delegated.
-                                 The only exception are methods annotated with the deprecated @JvmDefault annotation.
--Xjvm-default=disable            Do not generate JVM default methods and prohibit @JvmDefault annotation usage.
--Xjvm-default=enable             Allow usages of @JvmDefault; only generate the default method
-                                 for annotated method in the interface
-                                 (annotating an existing method can break binary compatibility)
--Xjvm-default=compatibility      Allow usages of @JvmDefault; generate a compatibility accessor
-                                 in the 'DefaultImpls' class in addition to the default interface method"""
+-Xjvm-default=all-compatibility  In addition to the 'all' mode, generate compatibility stubs in the DefaultImpls classes.
+                                 Compatibility stubs could be useful for library and runtime authors to keep backward binary compatibility
+                                 for existing clients compiled against previous library versions.
+                                 'all' and 'all-compatibility' modes are changing the library ABI surface that will be used by clients after
+                                 the recompilation of the library. In that sense, clients might be incompatible with previous library
+                                 versions. This usually means that proper library versioning is required, e.g. major version increase in SemVer.
+                                 In case of inheritance from a Kotlin interface compiled in 'all' or 'all-compatibility' modes, DefaultImpls
+                                 compatibility stubs will invoke the default method of the interface with standard JVM runtime resolution semantics.
+                                 Perform additional compatibility checks for classes inheriting generic interfaces where in some cases
+                                 additional implicit method with specialized signatures was generated in the 'disable' mode:
+                                 unlike in the 'disable' mode, the compiler will report an error if such method is not overridden explicitly
+                                 and the class is not annotated with @JvmDefaultWithoutCompatibility (see KT-39603 for more details).
+-Xjvm-default=disable            Default behavior. Do not generate JVM default methods and prohibit @JvmDefault annotation usage.
+-Xjvm-default=enable             Deprecated. Allow usages of @JvmDefault; only generate the default method for annotated method
+                                 in the interface (annotating an existing method can break binary compatibility).
+-Xjvm-default=compatibility      Deprecated. Allow usages of @JvmDefault; generate a compatibility accessor
+                                 in the DefaultImpls class in addition to the default interface method."""
     )
     var jvmDefault: String by FreezableVar(JvmDefaultMode.DEFAULT.description)
+
+    @Argument(
+        value = "-Xdefault-script-extension",
+        valueDescription = "<script filename extension>",
+        description = "Compile expressions and unrecognized scripts passed with the -script argument as scripts with given filename extension"
+    )
+    var defaultScriptExtension: String? by FreezableVar(null)
 
     @Argument(value = "-Xdisable-standard-script", description = "Disable standard kotlin script support")
     var disableStandardScript: Boolean by FreezableVar(false)
@@ -351,12 +371,43 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     @Argument(
         value = "-Xstring-concat",
         valueDescription = "{indy-with-constants|indy|inline}",
-        description = """Switch a way in which string concatenation is performed.
--Xstring-concat=indy-with-constants   Performs string concatenation via `invokedynamic` 'makeConcatWithConstants'. Works only with `-jvm-target 9` or greater
--Xstring-concat=indy                Performs string concatenation via `invokedynamic` 'makeConcat'. Works only with `-jvm-target 9` or greater
--Xstring-concat=inline              Performs string concatenation via `StringBuilder`"""
+        description = """Select code generation scheme for string concatenation.
+-Xstring-concat=indy-with-constants   Concatenate strings using `invokedynamic` `makeConcatWithConstants`. Requires `-jvm-target 9` or greater.
+-Xstring-concat=indy                Concatenate strings using `invokedynamic` `makeConcat`. Requires `-jvm-target 9` or greater.
+-Xstring-concat=inline              Concatenate strings using `StringBuilder`
+default: `indy-with-constants` for JVM target 9 or greater, `inline` otherwise"""
+
     )
-    var stringConcat: String? by NullableStringFreezableVar(JvmStringConcat.INLINE.description)
+    var stringConcat: String? by NullableStringFreezableVar(null)
+
+    @Argument(
+        value = "-Xjdk-release",
+        valueDescription = "<version>",
+        description = """Compile against the specified JDK API version, similarly to javac's `-release`. Requires JDK 9 or newer.
+Supported versions depend on the used JDK; for JDK 17+ supported versions are 1.8, 9, 10, ..., 17.
+Also sets `-jvm-target` value equal to the selected JDK version"""
+    )
+    var jdkRelease: String? by NullableStringFreezableVar(null)
+
+
+    @Argument(
+        value = "-Xsam-conversions",
+        valueDescription = "{class|indy}",
+        description = """Select code generation scheme for SAM conversions.
+-Xsam-conversions=indy              Generate SAM conversions using `invokedynamic` with `LambdaMetafactory.metafactory`. Requires `-jvm-target 1.8` or greater.
+-Xsam-conversions=class             Generate SAM conversions as explicit classes"""
+    )
+    var samConversions: String? by NullableStringFreezableVar(null)
+
+    @Argument(
+        value = "-Xlambdas",
+        valueDescription = "{class|indy}",
+        description = """Select code generation scheme for lambdas.
+-Xlambdas=indy                      Generate lambdas using `invokedynamic` with `LambdaMetafactory.metafactory`. Requires `-jvm-target 1.8` or greater.
+                                    Lambda objects created using `LambdaMetafactory.metafactory` will have different `toString()`.
+-Xlambdas=class                     Generate lambdas as explicit classes"""
+    )
+    var lambdas: String? by NullableStringFreezableVar(null)
 
     @Argument(
         value = "-Xklib",
@@ -392,10 +443,10 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     @Argument(
         value = "-Xprofile",
         valueDescription = "<profilerPath:command:outputDir>",
-        description = "Debug option: Run compiler with async profiler, save snapshots to outputDir, command is passed to async-profiler on start\n" +
-                "You'll have to provide async-profiler.jar on classpath to use this\n" +
-                "profilerPath is a path to libasyncProfiler.so\n" +
-                "Example: -Xprofile=<PATH_TO_ASYNC_PROFILER>/async-profiler/build/libasyncProfiler.so:event=cpu,interval=1ms,threads,start,framebuf=50000000:<SNAPSHOT_DIR_PATH>"
+        description = "Debug option: Run compiler with async profiler and save snapshots to `outputDir`; `command` is passed to async-profiler on start.\n" +
+                "`profilerPath` is a path to libasyncProfiler.so; async-profiler.jar should be on the compiler classpath.\n" +
+                "If it's not on the classpath, the compiler will attempt to load async-profiler.jar from the containing directory of profilerPath.\n" +
+                "Example: -Xprofile=<PATH_TO_ASYNC_PROFILER>/async-profiler/build/libasyncProfiler.so:event=cpu,interval=1ms,threads,start:<SNAPSHOT_DIR_PATH>"
     )
     var profileCompilerCommand: String? by NullableStringFreezableVar(null)
 
@@ -407,25 +458,69 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
     var repeatCompileModules: String? by NullableStringFreezableVar(null)
 
     @Argument(
-        value = "-Xuse-old-spilled-var-type-analysis",
-        description = "Use old, SourceInterpreter-based analysis for fields, used for spilled variables in coroutines"
-    )
-    var useOldSpilledVarTypeAnalysis: Boolean by FreezableVar(false)
-
-    @Argument(
         value = "-Xuse-14-inline-classes-mangling-scheme",
         description = "Use 1.4 inline classes mangling scheme instead of 1.4.30 one"
     )
     var useOldInlineClassesManglingScheme: Boolean by FreezableVar(false)
 
-    override fun configureAnalysisFlags(collector: MessageCollector): MutableMap<AnalysisFlag<*>, Any> {
-        val result = super.configureAnalysisFlags(collector)
+    @Argument(
+        value = "-Xjvm-enable-preview",
+        description = "Allow using features from Java language that are in preview phase.\n" +
+                "Works as `--enable-preview` in Java. All class files are marked as preview-generated thus it won't be possible to use them in release environment"
+    )
+    var enableJvmPreview: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xsuppress-deprecated-jvm-target-warning",
+        description = "Suppress deprecation warning about deprecated JVM target versions"
+    )
+    var suppressDeprecatedJvmTargetWarning: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xtype-enhancement-improvements-strict-mode",
+        description = "Enable strict mode for some improvements in the type enhancement for loaded Java types based on nullability annotations,\n" +
+                "including freshly supported reading of the type use annotations from class files.\n" +
+                "See KT-45671 for more details"
+    )
+    var typeEnhancementImprovementsInStrictMode: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xserialize-ir",
+        valueDescription = "{none|inline|all}",
+        description = "Save IR to metadata (EXPERIMENTAL)"
+    )
+    var serializeIr: String by FreezableVar("none")
+
+    @Argument(
+        value = "-Xvalidate-ir",
+        description = "Validate IR before and after lowering"
+    )
+    var validateIr: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xvalidate-bytecode",
+        description = "Validate generated JVM bytecode before and after optimizations"
+    )
+    var validateBytecode: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xenhance-type-parameter-types-to-def-not-null",
+        description = "Enhance not null annotated type parameter's types to definitely not null types (@NotNull T => T & Any)"
+    )
+    var enhanceTypeParameterTypesToDefNotNull: Boolean by FreezableVar(false)
+
+    @Argument(
+        value = "-Xlink-via-signatures",
+        description = "Link JVM IR symbols via signatures, instead of descriptors. \n" +
+                "This mode is slower, but can be useful in troubleshooting problems with the JVM IR backend"
+    )
+    var linkViaSignatures: Boolean by FreezableVar(false)
+
+    override fun configureAnalysisFlags(collector: MessageCollector, languageVersion: LanguageVersion): MutableMap<AnalysisFlag<*>, Any> {
+        val result = super.configureAnalysisFlags(collector, languageVersion)
         result[JvmAnalysisFlags.strictMetadataVersionSemantics] = strictMetadataVersionSemantics
-        result[JvmAnalysisFlags.javaTypeEnhancementState] = JavaTypeEnhancementStateParser(collector).parse(
-            jsr305,
-            supportCompatqualCheckerFrameworkAnnotations,
-            jspecifyAnnotations
-        )
+        result[JvmAnalysisFlags.javaTypeEnhancementState] = JavaTypeEnhancementStateParser(collector, languageVersion.toKotlinVersion())
+            .parse(jsr305, supportCompatqualCheckerFrameworkAnnotations, jspecifyAnnotations, nullabilityAnnotations)
         result[AnalysisFlags.ignoreDataFlowInAssert] = JVMAssertionsMode.fromString(assertionsMode) != JVMAssertionsMode.LEGACY
         JvmDefaultMode.fromStringOrNull(jvmDefault)?.let {
             result[JvmAnalysisFlags.jvmDefaultMode] = it
@@ -437,30 +532,46 @@ class K2JVMCompilerArguments : CommonCompilerArguments() {
         result[JvmAnalysisFlags.inheritMultifileParts] = inheritMultifileParts
         result[JvmAnalysisFlags.sanitizeParentheses] = sanitizeParentheses
         result[JvmAnalysisFlags.suppressMissingBuiltinsError] = suppressMissingBuiltinsError
-        result[JvmAnalysisFlags.irCheckLocalNames] = irCheckLocalNames
-        result[AnalysisFlags.reportErrorsOnIrDependencies] = !useIR && !useFir && !allowJvmIrDependencies
+        result[JvmAnalysisFlags.enableJvmPreview] = enableJvmPreview
+        result[AnalysisFlags.allowUnstableDependencies] = allowUnstableDependencies || useFir
         result[JvmAnalysisFlags.disableUltraLightClasses] = disableUltraLightClasses
+        result[JvmAnalysisFlags.useIR] = !useOldBackend
         return result
     }
 
     override fun configureLanguageFeatures(collector: MessageCollector): MutableMap<LanguageFeature, LanguageFeature.State> {
         val result = super.configureLanguageFeatures(collector)
-        if (strictJavaNullabilityAssertions) {
-            result[LanguageFeature.StrictJavaNullabilityAssertions] = LanguageFeature.State.ENABLED
+        if (typeEnhancementImprovementsInStrictMode) {
+            result[LanguageFeature.TypeEnhancementImprovementsInStrictMode] = LanguageFeature.State.ENABLED
+        }
+        if (enhanceTypeParameterTypesToDefNotNull) {
+            result[LanguageFeature.ProhibitUsingNullableTypeParameterAgainstNotNullAnnotated] = LanguageFeature.State.ENABLED
+        }
+        if (JvmDefaultMode.fromStringOrNull(jvmDefault)?.forAllMethodsWithBody == true) {
+            result[LanguageFeature.ForbidSuperDelegationToAbstractFakeOverride] = LanguageFeature.State.ENABLED
+            result[LanguageFeature.AbstractClassMemberNotImplementedWithIntermediateAbstractClass] = LanguageFeature.State.ENABLED
         }
         return result
     }
 
-    override fun checkIrSupport(languageVersionSettings: LanguageVersionSettings, collector: MessageCollector) {
-        if (!useIR) return
+    override fun defaultLanguageVersion(collector: MessageCollector): LanguageVersion =
+        if (useOldBackend) {
+            if (!suppressVersionWarnings) {
+                collector.report(
+                    CompilerMessageSeverity.STRONG_WARNING,
+                    "Language version is automatically inferred to ${LanguageVersion.KOTLIN_1_5.versionString} when using " +
+                            "the old JVM backend. Consider specifying -language-version explicitly, or remove -Xuse-old-backend"
+                )
+            }
+            LanguageVersion.KOTLIN_1_5
+        } else super.defaultLanguageVersion(collector)
 
-        if (languageVersionSettings.languageVersion < LanguageVersion.KOTLIN_1_3
-            || languageVersionSettings.apiVersion < ApiVersion.KOTLIN_1_3
-        ) {
+    override fun checkPlatformSpecificSettings(languageVersionSettings: LanguageVersionSettings, collector: MessageCollector) {
+        if (useOldBackend && languageVersionSettings.languageVersion >= LanguageVersion.KOTLIN_1_6) {
             collector.report(
-                CompilerMessageSeverity.STRONG_WARNING,
-                "IR backend does not support language or API version lower than 1.3. " +
-                        "This can lead to unexpected behavior or compilation failures"
+                CompilerMessageSeverity.ERROR,
+                "Old JVM backend does not support language version 1.6 or above. " +
+                        "Please use language version 1.5 or below, or remove -Xuse-old-backend"
             )
         }
     }
